# Computer_Graphics_ESIEE

./: .gitignore  Basic.fs  Basic.vs  CMakeLists.txt  GLShader.cpp  GLShader.h  Makefile  README.md  dragonData.h  imgui.ini  main.cpp  utils.cpp
assets/3DApple002_SQ-1K-PNG/: 3DApple002_SQ-1K-PNG.mtl  3DApple002_SQ-1K-PNG.usdc
shaders/: Basic.fs  Basic.vs  env.fs  env.vs  phong.fs  phong.vs  screen_quad.fs  skybox.fs  skybox.vs  texture.fs  texture.vs
src/: main.cpp  mat4.h
